--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
                 <activity android:name=".MainActivity"
+                    android:theme="@android:style/Theme.Black.NoTitleBar"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden|navigation">
@@ -23,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RabitActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden|navigation">
@@ -32,7 +34,7 @@
             </intent-filter>
         </activity>
 		<activity android:name=".GameActivity"
-		    	
+		    	android:theme="@android:style/Theme.Black.NoTitleBar"
 				android:screenOrientation="portrait"
                 android:configChanges="orientation|keyboardHidden|navigation"></activity>
 				<activity android:name=".HelpActivity"
